force-app/main/default/objects/Baselines_Forecasts__c/Baselines_Forecasts__c.object-meta.xml
<CustomObject>
    <label>Baselines &amp; Forecasts</label>
    <nameField>
        <displayFormat>SKU Baseline {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baselines &amp; Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>