force-app/main/default/objects/Baselines_Forecasts__c/fields/Account_SKU__c.field-meta.xml
<CustomField>
    <fullName>Account_SKU__c</fullName>
    <label>Account SKU</label>
    <referenceTo>Account_SKU__c</referenceTo>
    <relationshipLabel>Baselines &amp; Forecasts</relationshipLabel>
    <relationshipName>Baselines_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>