force-app/main/default/objects/Baselines_Forecasts__c/fields/Annual_weekly_baseline_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_weekly_baseline_Total__c</fullName>
    <label>Annual weekly baseline Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>