force-app/main/default/objects/Baselines_Forecasts__c/fields/Baseline_Volume_Week12_units__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Volume_Week12_units__c</fullName>
    <label>Week12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>