force-app/main/default/objects/Baselines_Forecasts__c/fields/Baseline_weekly_volume_units__c.field-meta.xml
<CustomField>
    <fullName>Baseline_weekly_volume_units__c</fullName>
    <label>Baseline weekly volume (units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>