force-app/main/default/objects/Baselines_Forecasts__c/fields/Basline_unique__c.field-meta.xml
<CustomField>
    <fullName>Basline_unique__c</fullName>
    <label>Basline unique</label>
    <length>100</length>
    <type>Text</type>
</CustomField>