force-app/main/default/objects/Baselines_Forecasts__c/fields/CY__c.field-meta.xml
<CustomField>
    <fullName>CY__c</fullName>
    <formula>IF( VALUE(Year__c ) = YEAR( TODAY() ) , 1, 0)</formula>
    <label>CY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>